crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__provides__provide_with_entity_join-graph.snap
---
source: crates/engine/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.products\" ]\n    2 [ label = \"Product.id\" ]\n    3 [ label = \"Product.categories\" ]\n    4 [ label = \"Category.id\" ]\n    5 [ label = \"Category.name\" ]\n    6 [ label = \"Category.kind\" ]\n    7 [ label = \"Category.subCategories\" ]\n    8 [ label = \"Category.id\" ]\n    9 [ label = \"Category.name\" ]\n    10 [ label = \"Category.kind\" ]\n    11 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    12 [ label = \"products#products\", shape=box, color=dodgerblue ]\n    13 [ label = \"id#products\", shape=box, color=dodgerblue ]\n    14 [ label = \"categories#products@provides\", shape=box, color=dodgerblue ]\n    15 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue ]\n    16 [ label = \"categories#category\", shape=box, color=dodgerblue ]\n    17 [ label = \"id#category\", shape=box, color=dodgerblue ]\n    18 [ label = \"name#category\", shape=box, color=dodgerblue ]\n    19 [ label = \"kind#category\", shape=box, color=dodgerblue ]\n    20 [ label = \"FedEntity#subcategories\", shape=parallelogram, color=dodgerblue ]\n    21 [ label = \"subCategories#subcategories\", shape=box, color=dodgerblue ]\n    22 [ label = \"id#subcategories\", shape=box, color=dodgerblue ]\n    23 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue ]\n    24 [ label = \"name#category\", shape=box, color=dodgerblue ]\n    25 [ label = \"kind#subcategories@provides\", shape=box, color=dodgerblue ]\n    26 [ label = \"kind#category\", shape=box, color=dodgerblue ]\n    27 [ label = \"id#products@provides\", shape=box, color=dodgerblue ]\n    28 [ label = \"name#products@provides\", shape=box, color=dodgerblue ]\n    29 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue ]\n    30 [ label = \"name#category\", shape=box, color=dodgerblue ]\n    31 [ label = \"kind#category\", shape=box, color=dodgerblue ]\n    32 [ label = \"subCategories#products@provides\", shape=box, color=dodgerblue ]\n    33 [ label = \"id#products@provides\", shape=box, color=dodgerblue ]\n    34 [ label = \"name#products@provides\", shape=box, color=dodgerblue ]\n    0 -> 1 [  ]\n    1 -> 2 [  ]\n    1 -> 3 [  ]\n    3 -> 4 [  ]\n    3 -> 5 [  ]\n    3 -> 6 [  ]\n    3 -> 7 [  ]\n    7 -> 8 [  ]\n    7 -> 9 [  ]\n    7 -> 10 [  ]\n    0 -> 11 [ color=royalblue,fontcolor=royalblue ]\n    0 -> 11 [ style=dashed,arrowhead=none ]\n    11 -> 12 [ color=royalblue,fontcolor=royalblue ]\n    12 -> 1 [ color=violet,arrowhead=none ]\n    12 -> 13 [ color=royalblue,fontcolor=royalblue ]\n    13 -> 2 [ color=violet,arrowhead=none ]\n    12 -> 14 [ color=royalblue,fontcolor=royalblue ]\n    14 -> 3 [ color=violet,arrowhead=none ]\n    12 -> 15 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 15 [ style=dashed,arrowhead=none ]\n    15 -> 16 [ color=royalblue,fontcolor=royalblue ]\n    16 -> 3 [ color=violet,arrowhead=none ]\n    16 -> 17 [ color=royalblue,fontcolor=royalblue ]\n    17 -> 4 [ color=violet,arrowhead=none ]\n    16 -> 18 [ color=royalblue,fontcolor=royalblue ]\n    18 -> 5 [ color=violet,arrowhead=none ]\n    16 -> 19 [ color=royalblue,fontcolor=royalblue ]\n    19 -> 6 [ color=violet,arrowhead=none ]\n    16 -> 20 [ color=royalblue,fontcolor=royalblue ]\n    3 -> 20 [ style=dashed,arrowhead=none ]\n    20 -> 21 [ color=royalblue,fontcolor=royalblue ]\n    21 -> 7 [ color=violet,arrowhead=none ]\n    21 -> 22 [ color=royalblue,fontcolor=royalblue ]\n    22 -> 8 [ color=violet,arrowhead=none ]\n    21 -> 23 [ color=royalblue,fontcolor=royalblue ]\n    7 -> 23 [ style=dashed,arrowhead=none ]\n    23 -> 24 [ color=royalblue,fontcolor=royalblue ]\n    24 -> 9 [ color=violet,arrowhead=none ]\n    21 -> 25 [ color=royalblue,fontcolor=royalblue ]\n    25 -> 10 [ color=violet,arrowhead=none ]\n    23 -> 26 [ color=royalblue,fontcolor=royalblue ]\n    26 -> 10 [ color=violet,arrowhead=none ]\n    14 -> 27 [ color=royalblue,fontcolor=royalblue ]\n    27 -> 4 [ color=violet,arrowhead=none ]\n    14 -> 28 [ color=royalblue,fontcolor=royalblue ]\n    28 -> 5 [ color=violet,arrowhead=none ]\n    14 -> 29 [ color=royalblue,fontcolor=royalblue ]\n    3 -> 29 [ style=dashed,arrowhead=none ]\n    29 -> 30 [ color=royalblue,fontcolor=royalblue ]\n    30 -> 5 [ color=violet,arrowhead=none ]\n    29 -> 31 [ color=royalblue,fontcolor=royalblue ]\n    31 -> 6 [ color=violet,arrowhead=none ]\n    14 -> 32 [ color=royalblue,fontcolor=royalblue ]\n    32 -> 7 [ color=violet,arrowhead=none ]\n    14 -> 20 [ color=royalblue,fontcolor=royalblue ]\n    32 -> 33 [ color=royalblue,fontcolor=royalblue ]\n    33 -> 8 [ color=violet,arrowhead=none ]\n    32 -> 34 [ color=royalblue,fontcolor=royalblue ]\n    34 -> 9 [ color=violet,arrowhead=none ]\n    32 -> 23 [ color=royalblue,fontcolor=royalblue ]\n    29 -> 4 [ color=orangered,arrowhead=inv ]\n    23 -> 8 [ color=orangered,arrowhead=inv ]\n    20 -> 4 [ color=orangered,arrowhead=inv ]\n    15 -> 2 [ color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.products]
    2 [ Product.id]
    3 [ Product.categories]
    4 [ Category.id]
    5 [ Category.name]
    6 [ Category.kind]
    7 [ Category.subCategories]
    8 [ Category.id]
    9 [ Category.name]
    10 [ Category.kind]
    11 [ Root#products]
    12 [ products#products]
    13 [ id#products]
    14 [ categories#products@provides]
    15 [ FedEntity#category]
    16 [ categories#category]
    17 [ id#category]
    18 [ name#category]
    19 [ kind#category]
    20 [ FedEntity#subcategories]
    21 [ subCategories#subcategories]
    22 [ id#subcategories]
    23 [ FedEntity#category]
    24 [ name#category]
    25 [ kind#subcategories@provides]
    26 [ kind#category]
    27 [ id#products@provides]
    28 [ name#products@provides]
    29 [ FedEntity#category]
    30 [ name#category]
    31 [ kind#category]
    32 [ subCategories#products@provides]
    33 [ id#products@provides]
    34 [ name#products@provides]
    0 -> 1 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
    1 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
    3 -> 5 [ label = "Field" ]
    3 -> 6 [ label = "Field" ]
    3 -> 7 [ label = "Field" ]
    7 -> 8 [ label = "Field" ]
    7 -> 9 [ label = "Field" ]
    7 -> 10 [ label = "Field" ]
    0 -> 11 [ label = "CreateChildResolver" ]
    0 -> 11 [ label = "HasChildResolver" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 1 [ label = "Provides" ]
    12 -> 13 [ label = "CanProvide" ]
    13 -> 2 [ label = "Provides" ]
    12 -> 14 [ label = "CanProvide" ]
    14 -> 3 [ label = "Provides" ]
    12 -> 15 [ label = "CreateChildResolver" ]
    1 -> 15 [ label = "HasChildResolver" ]
    15 -> 16 [ label = "CanProvide" ]
    16 -> 3 [ label = "Provides" ]
    16 -> 17 [ label = "CanProvide" ]
    17 -> 4 [ label = "Provides" ]
    16 -> 18 [ label = "CanProvide" ]
    18 -> 5 [ label = "Provides" ]
    16 -> 19 [ label = "CanProvide" ]
    19 -> 6 [ label = "Provides" ]
    16 -> 20 [ label = "CreateChildResolver" ]
    3 -> 20 [ label = "HasChildResolver" ]
    20 -> 21 [ label = "CanProvide" ]
    21 -> 7 [ label = "Provides" ]
    21 -> 22 [ label = "CanProvide" ]
    22 -> 8 [ label = "Provides" ]
    21 -> 23 [ label = "CreateChildResolver" ]
    7 -> 23 [ label = "HasChildResolver" ]
    23 -> 24 [ label = "CanProvide" ]
    24 -> 9 [ label = "Provides" ]
    21 -> 25 [ label = "CanProvide" ]
    25 -> 10 [ label = "Provides" ]
    23 -> 26 [ label = "CanProvide" ]
    26 -> 10 [ label = "Provides" ]
    14 -> 27 [ label = "CanProvide" ]
    27 -> 4 [ label = "Provides" ]
    14 -> 28 [ label = "CanProvide" ]
    28 -> 5 [ label = "Provides" ]
    14 -> 29 [ label = "CreateChildResolver" ]
    3 -> 29 [ label = "HasChildResolver" ]
    29 -> 30 [ label = "CanProvide" ]
    30 -> 5 [ label = "Provides" ]
    29 -> 31 [ label = "CanProvide" ]
    31 -> 6 [ label = "Provides" ]
    14 -> 32 [ label = "CanProvide" ]
    32 -> 7 [ label = "Provides" ]
    14 -> 20 [ label = "CreateChildResolver" ]
    32 -> 33 [ label = "CanProvide" ]
    33 -> 8 [ label = "Provides" ]
    32 -> 34 [ label = "CanProvide" ]
    34 -> 9 [ label = "Provides" ]
    32 -> 23 [ label = "CreateChildResolver" ]
    29 -> 4 [ label = "Requires" ]
    23 -> 8 [ label = "Requires" ]
    20 -> 4 [ label = "Requires" ]
    15 -> 2 [ label = "Requires" ]
}
