crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__provides__provide_with_entity_join-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"Product.id\" ]\n    4 [ label = \"Product.categories\" ]\n    5 [ label = \"Category.id\" ]\n    6 [ label = \"Category.name\" ]\n    7 [ label = \"FedEntity#category\", color=royalblue,shape=parallelogram ]\n    8 [ label = \"Category.kind\" ]\n    9 [ label = \"Category.subCategories\" ]\n    10 [ label = \"Category.id\" ]\n    11 [ label = \"Category.name\" ]\n    12 [ label = \"FedEntity#subcategories\", color=royalblue,shape=parallelogram ]\n    13 [ label = \"Category.subCategories\" ]\n    14 [ label = \"Category.kind\" ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [  ]\n    2 -> 3 [  ]\n    2 -> 4 [  ]\n    4 -> 5 [  ]\n    4 -> 6 [  ]\n    4 -> 7 [ color=royalblue,fontcolor=royalblue ]\n    7 -> 8 [  ]\n    4 -> 9 [  ]\n    9 -> 10 [  ]\n    9 -> 11 [  ]\n    4 -> 12 [ color=royalblue,fontcolor=royalblue ]\n    12 -> 13 [  ]\n    13 -> 14 [  ]\n    7 -> 5 [ color=orangered,arrowhead=inv ]\n    12 -> 5 [ color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#products" ]
    2 [ label = "Query.products" ]
    3 [ label = "Product.id" ]
    4 [ label = "Product.categories" ]
    5 [ label = "Category.id" ]
    6 [ label = "Category.name" ]
    7 [ label = "FedEntity#category" ]
    8 [ label = "Category.kind" ]
    9 [ label = "Category.subCategories" ]
    10 [ label = "Category.id" ]
    11 [ label = "Category.name" ]
    12 [ label = "FedEntity#subcategories" ]
    13 [ label = "Category.subCategories" ]
    14 [ label = "Category.kind" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    4 -> 6 [ label = "Field" ]
    4 -> 7 [ label = "QueryPartition" ]
    7 -> 8 [ label = "Field" ]
    4 -> 9 [ label = "Field" ]
    9 -> 10 [ label = "Field" ]
    9 -> 11 [ label = "Field" ]
    4 -> 12 [ label = "QueryPartition" ]
    12 -> 13 [ label = "Field" ]
    13 -> 14 [ label = "Field" ]
    7 -> 5 [ label = "RequiredBySubgraph" ]
    12 -> 5 [ label = "RequiredBySubgraph" ]
}
