crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__provides__provides_full-finalized-solution.snap
---
source: crates/engine/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"Product.id\" ]\n    4 [ label = \"Product.categories\" ]\n    5 [ label = \"Category.id\" ]\n    6 [ label = \"Category.name\" ]\n    7 [ label = \"Category.subCategories\" ]\n    8 [ label = \"Category.id\" ]\n    9 [ label = \"Category.name\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 9 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    2 -> 4 [ label = \"\" ]\n    4 -> 5 [ label = \"\" ]\n    4 -> 6 [ label = \"\" ]\n    4 -> 7 [ label = \"\" ]\n    7 -> 8 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#products" ]
    2 [ label = "Query.products" ]
    3 [ label = "Product.id" ]
    4 [ label = "Product.categories" ]
    5 [ label = "Category.id" ]
    6 [ label = "Category.name" ]
    7 [ label = "Category.subCategories" ]
    8 [ label = "Category.id" ]
    9 [ label = "Category.name" ]
    0 -> 1 [ label = "QueryPartition" ]
    7 -> 9 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    4 -> 6 [ label = "Field" ]
    4 -> 7 [ label = "Field" ]
    7 -> 8 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
