crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__provides__provides_full-graph.snap
---
source: crates/engine/query-solver/src/tests/provides.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.products\" ]\n    2 [ label = \"Product.id\" ]\n    3 [ label = \"Product.categories\" ]\n    4 [ label = \"Category.id\" ]\n    5 [ label = \"Category.name\" ]\n    6 [ label = \"Category.subCategories\" ]\n    7 [ label = \"Category.id\" ]\n    8 [ label = \"Category.name\" ]\n    9 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    10 [ label = \"products#products\", shape=box, color=dodgerblue ]\n    11 [ label = \"id#products\", shape=box, color=dodgerblue ]\n    12 [ label = \"categories#products@provides\", shape=box, color=dodgerblue ]\n    13 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue ]\n    14 [ label = \"categories#category\", shape=box, color=dodgerblue ]\n    15 [ label = \"id#category\", shape=box, color=dodgerblue ]\n    16 [ label = \"name#category\", shape=box, color=dodgerblue ]\n    17 [ label = \"FedEntity#subcategories\", shape=parallelogram, color=dodgerblue ]\n    18 [ label = \"subCategories#subcategories\", shape=box, color=dodgerblue ]\n    19 [ label = \"id#subcategories\", shape=box, color=dodgerblue ]\n    20 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue ]\n    21 [ label = \"name#category\", shape=box, color=dodgerblue ]\n    22 [ label = \"id#products@provides\", shape=box, color=dodgerblue ]\n    23 [ label = \"name#products@provides\", shape=box, color=dodgerblue ]\n    24 [ label = \"FedEntity#category\", shape=parallelogram, color=dodgerblue ]\n    25 [ label = \"name#category\", shape=box, color=dodgerblue ]\n    26 [ label = \"subCategories#products@provides\", shape=box, color=dodgerblue ]\n    27 [ label = \"id#products@provides\", shape=box, color=dodgerblue ]\n    28 [ label = \"name#products@provides\", shape=box, color=dodgerblue ]\n    0 -> 1 [  ]\n    1 -> 2 [  ]\n    1 -> 3 [  ]\n    3 -> 4 [  ]\n    3 -> 5 [  ]\n    3 -> 6 [  ]\n    6 -> 7 [  ]\n    6 -> 8 [  ]\n    0 -> 9 [ color=royalblue,fontcolor=royalblue ]\n    0 -> 9 [ style=dashed,arrowhead=none ]\n    9 -> 10 [ color=royalblue,fontcolor=royalblue ]\n    10 -> 1 [ color=violet,arrowhead=none ]\n    10 -> 11 [ color=royalblue,fontcolor=royalblue ]\n    11 -> 2 [ color=violet,arrowhead=none ]\n    10 -> 12 [ color=royalblue,fontcolor=royalblue ]\n    12 -> 3 [ color=violet,arrowhead=none ]\n    10 -> 13 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 13 [ style=dashed,arrowhead=none ]\n    13 -> 14 [ color=royalblue,fontcolor=royalblue ]\n    14 -> 3 [ color=violet,arrowhead=none ]\n    14 -> 15 [ color=royalblue,fontcolor=royalblue ]\n    15 -> 4 [ color=violet,arrowhead=none ]\n    14 -> 16 [ color=royalblue,fontcolor=royalblue ]\n    16 -> 5 [ color=violet,arrowhead=none ]\n    14 -> 17 [ color=royalblue,fontcolor=royalblue ]\n    3 -> 17 [ style=dashed,arrowhead=none ]\n    17 -> 18 [ color=royalblue,fontcolor=royalblue ]\n    18 -> 6 [ color=violet,arrowhead=none ]\n    18 -> 19 [ color=royalblue,fontcolor=royalblue ]\n    19 -> 7 [ color=violet,arrowhead=none ]\n    18 -> 20 [ color=royalblue,fontcolor=royalblue ]\n    6 -> 20 [ style=dashed,arrowhead=none ]\n    20 -> 21 [ color=royalblue,fontcolor=royalblue ]\n    21 -> 8 [ color=violet,arrowhead=none ]\n    12 -> 22 [ color=royalblue,fontcolor=royalblue ]\n    22 -> 4 [ color=violet,arrowhead=none ]\n    12 -> 23 [ color=royalblue,fontcolor=royalblue ]\n    23 -> 5 [ color=violet,arrowhead=none ]\n    12 -> 24 [ color=royalblue,fontcolor=royalblue ]\n    3 -> 24 [ style=dashed,arrowhead=none ]\n    24 -> 25 [ color=royalblue,fontcolor=royalblue ]\n    25 -> 5 [ color=violet,arrowhead=none ]\n    12 -> 26 [ color=royalblue,fontcolor=royalblue ]\n    26 -> 6 [ color=violet,arrowhead=none ]\n    12 -> 17 [ color=royalblue,fontcolor=royalblue ]\n    26 -> 27 [ color=royalblue,fontcolor=royalblue ]\n    27 -> 7 [ color=violet,arrowhead=none ]\n    26 -> 28 [ color=royalblue,fontcolor=royalblue ]\n    28 -> 8 [ color=violet,arrowhead=none ]\n    26 -> 20 [ color=royalblue,fontcolor=royalblue ]\n    24 -> 4 [ color=orangered,arrowhead=inv ]\n    20 -> 7 [ color=orangered,arrowhead=inv ]\n    17 -> 4 [ color=orangered,arrowhead=inv ]\n    13 -> 2 [ color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.products]
    2 [ Product.id]
    3 [ Product.categories]
    4 [ Category.id]
    5 [ Category.name]
    6 [ Category.subCategories]
    7 [ Category.id]
    8 [ Category.name]
    9 [ Root#products]
    10 [ products#products]
    11 [ id#products]
    12 [ categories#products@provides]
    13 [ FedEntity#category]
    14 [ categories#category]
    15 [ id#category]
    16 [ name#category]
    17 [ FedEntity#subcategories]
    18 [ subCategories#subcategories]
    19 [ id#subcategories]
    20 [ FedEntity#category]
    21 [ name#category]
    22 [ id#products@provides]
    23 [ name#products@provides]
    24 [ FedEntity#category]
    25 [ name#category]
    26 [ subCategories#products@provides]
    27 [ id#products@provides]
    28 [ name#products@provides]
    0 -> 1 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
    1 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
    3 -> 5 [ label = "Field" ]
    3 -> 6 [ label = "Field" ]
    6 -> 7 [ label = "Field" ]
    6 -> 8 [ label = "Field" ]
    0 -> 9 [ label = "CreateChildResolver" ]
    0 -> 9 [ label = "HasChildResolver" ]
    9 -> 10 [ label = "CanProvide" ]
    10 -> 1 [ label = "Provides" ]
    10 -> 11 [ label = "CanProvide" ]
    11 -> 2 [ label = "Provides" ]
    10 -> 12 [ label = "CanProvide" ]
    12 -> 3 [ label = "Provides" ]
    10 -> 13 [ label = "CreateChildResolver" ]
    1 -> 13 [ label = "HasChildResolver" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 3 [ label = "Provides" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 4 [ label = "Provides" ]
    14 -> 16 [ label = "CanProvide" ]
    16 -> 5 [ label = "Provides" ]
    14 -> 17 [ label = "CreateChildResolver" ]
    3 -> 17 [ label = "HasChildResolver" ]
    17 -> 18 [ label = "CanProvide" ]
    18 -> 6 [ label = "Provides" ]
    18 -> 19 [ label = "CanProvide" ]
    19 -> 7 [ label = "Provides" ]
    18 -> 20 [ label = "CreateChildResolver" ]
    6 -> 20 [ label = "HasChildResolver" ]
    20 -> 21 [ label = "CanProvide" ]
    21 -> 8 [ label = "Provides" ]
    12 -> 22 [ label = "CanProvide" ]
    22 -> 4 [ label = "Provides" ]
    12 -> 23 [ label = "CanProvide" ]
    23 -> 5 [ label = "Provides" ]
    12 -> 24 [ label = "CreateChildResolver" ]
    3 -> 24 [ label = "HasChildResolver" ]
    24 -> 25 [ label = "CanProvide" ]
    25 -> 5 [ label = "Provides" ]
    12 -> 26 [ label = "CanProvide" ]
    26 -> 6 [ label = "Provides" ]
    12 -> 17 [ label = "CreateChildResolver" ]
    26 -> 27 [ label = "CanProvide" ]
    27 -> 7 [ label = "Provides" ]
    26 -> 28 [ label = "CanProvide" ]
    28 -> 8 [ label = "Provides" ]
    26 -> 20 [ label = "CreateChildResolver" ]
    24 -> 4 [ label = "Requires" ]
    20 -> 7 [ label = "Requires" ]
    17 -> 4 [ label = "Requires" ]
    13 -> 2 [ label = "Requires" ]
}
